--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,5 +1,6 @@
 extends ../shared/template
 
 block content
-  h1 Node.js Template
-  a.button.button-3d-highlight.button-circle(href='/help') Help
+  .container
+    h1.col-lg-4.col-lg-offset-4 8 Bit Adventures
+
